Updating template to 0.0.12
Updating to template version 0.0.12

Copying from template version 0.0.12
 identical  .
 identical  CONTRIBUTING.md
 identical  LICENSE
  conflict  pyproject.toml
 overwrite  pyproject.toml
 identical  .github
 identical  .github/workflows
 identical  .github/workflows/tests.yml
 identical  .pre-commit-config.yaml
  conflict  .gitignore
 overwrite  .gitignore
  conflict  readthedocs.yaml
 overwrite  readthedocs.yaml
 identical  tests
 identical  tests/test_numpyro_ext.py
 identical  setup.py
 identical  noxfile.py
 identical  README.md
  conflict  .copier-answers.yml
 overwrite  .copier-answers.yml
 identical  CODE_OF_CONDUCT.md
 identical  src
 identical  src/numpyro_ext
 identical  src/numpyro_ext/__init__.py

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ description = "Some extensions to numpyro that I find useful"
 authors = [{ name = "Dan Foreman-Mackey", email = "foreman.mackey@gmail.com" }]
 readme = "README.md"
 requires-python = ">=3.7"
-license = { file = "LICENSE" }
+license = { text = "Apache License" }
 classifiers = [
     "Operating System :: OS Independent",
     "Programming Language :: Python :: 3",
@@ -47,7 +47,11 @@ known_first_party = ["numpyro_ext"]
 parallel = true
 branch = true
 source = ["numpyro_ext"]
-omit = ["docs/*", "tests/*", "*/numpyro_ext/numpyro_ext_version.py"]
+omit = [
+    "docs/*",
+    "tests/*",
+    "*/numpyro_ext/version.py",
+]
 
 [tool.coverage.paths]
 source = ["src", "*/site-packages"]
