install typing_extensions

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -10,7 +10,7 @@ on:
   workflow_dispatch:
     inputs:
       prerelease:
-        description: 'Run a pre-release, testing the build'
+        description: "Run a pre-release, testing the build"
         required: false
         type: boolean
         default: false
@@ -22,7 +22,7 @@ jobs:
       fail-fast: false
       matrix:
         os: ["ubuntu-latest"]
-        python-version: ["3.7", "3.8", "3.9", "3.10"]
+        python-version: ["3.8", "3.9", "3.10"]
         nox-session: ["tests"]
         include:
           - os: macos-latest
