--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ name = "numpyro-ext"
 description = "Some extensions to numpyro that I find useful"
 authors = [{ name = "Dan Foreman-Mackey", email = "foreman.mackey@gmail.com" }]
 readme = "README.md"
-requires-python = ">=3.7"
+requires-python = ">=3.8"
 license = { text = "Apache License" }
 classifiers = [
     "Operating System :: OS Independent",
@@ -24,7 +24,7 @@ dependencies = ["numpyro"]
 "Bug Tracker" = "https://github.com/dfm/numpyro-ext/issues"
 
 [project.optional-dependencies]
-test = ["pytest", "jaxopt"]
+test = ["pytest", "jaxopt", "typing_extensions"]
 docs = []
 ncx2 = ["tensorflow-probability"]
 
