--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -74,12 +74,37 @@ jobs:
       - name: Run tests
         run: python -m nox --non-interactive -s ${{ matrix.nox-session }}
 
-  release:
-    if: ${{ inputs.prerelease || startsWith(github.ref, 'refs/tags/') }}
-    needs: tests
-    uses: dfm/workflows/.github/workflows/python-release.yml@v0.1.0
-    with:
-      wheels: false
-      enable-windows: false
-    secrets:
-      pypi-token: ${{ secrets.pypi_password }}
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+      - uses: actions/setup-python@v4
+        name: Install Python
+        with:
+          python-version: "3.9"
+      - name: Build sdist and wheel
+        run: |
+          python -m pip install -U pip
+          python -m pip install -U build
+          python -m build .
+      - uses: actions/upload-artifact@v3
+        with:
+          path: dist/*
+
+  upload_pypi:
+    environment:
+      name: pypi
+      url: https://pypi.org/p/snakemake-staging
+    permissions:
+      id-token: write
+    needs: [tests, build]
+    runs-on: ubuntu-latest
+    if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/')
+    steps:
+      - uses: actions/download-artifact@v3
+        with:
+          name: artifact
+          path: dist
+      - uses: pypa/gh-action-pypi-publish@v1.8.6
